syntax = "proto3";

package analysis;

option go_package = "github.com/vanillaturtlechips/silver-guardian/backend/proto";

// 서비스 정의
service AnalysisService {
  // 분석 시작
  rpc StartAnalysis(AnalysisRequest) returns (AnalysisResponse);
  
  // 실시간 진행 상황 스트리밍
  rpc StreamProgress(ProgressRequest) returns (stream ProgressEvent);
  
  // 결과 조회
  rpc GetResult(ResultRequest) returns (AnalysisResult);
  
  // 작업 취소 (선택 사항)
  rpc CancelAnalysis(CancelRequest) returns (CancelResponse);

  // Auth & User 기능을 위한 RPC 추가 ---
  rpc LoginWithGoogle (LoginRequest) returns (LoginResponse);
  rpc GetUserProfile (GetProfileRequest) returns (UserProfileResponse);
  rpc GetUserHistory (GetHistoryRequest) returns (HistoryResponse);

  // S3 Presigned URL 발급 ---
  rpc GetUploadURL (UploadURLRequest) returns (UploadURLResponse);

  // 분석 결과 조회 (video_id 기반) ---
  rpc GetAnalysisResult (AnalysisResultRequest) returns (AnalysisResultResponse);
}

// --- 메시지 정의 ---

message AnalysisRequest {
  string video_url = 1;
  AnalysisOptions options = 2;
  string user_id = 3; 
}

message AnalysisOptions {
  int32 sensitivity = 1;  // 0=Low, 1=Medium, 2=High
  bool analyze_comments = 2;
  int32 top_comments_count = 3;
}

message AnalysisResponse {
  string job_id = 1;
  string status = 2;
  string message = 3;
}

message ProgressRequest {
  string job_id = 1;
}

message ProgressEvent {
  string job_id = 1;
  string type = 2;  // "log", "progress", "complete", "error"
  string message = 3;
  int32 progress = 4;
  string timestamp = 5;
}

message ResultRequest {
  string job_id = 1;
}

message AnalysisResult {
  string job_id = 1;
  string video_id = 2;
  VideoMetadata metadata = 3;
  int32 safety_score = 4;
  repeated string categories = 5;
  string gemini_response = 6;
  repeated Comment top_comments = 7;
  string status = 8;
  string created_at = 9;
  string completed_at = 10;
}

message VideoMetadata {
  string title = 1;
  string description = 2;
  string channel = 3;
  int64 duration = 4;
  int64 view_count = 5;
  string published_at = 6;
}

message Comment {
  string author = 1;
  string text = 2;
  int64 likes = 3;
  int32 rank = 4;
}

message CancelRequest {
  string job_id = 1;
}

message CancelResponse {
  string job_id = 1;
  bool cancelled = 2;
  string message = 3;
}

// --- [NEW] Auth & User Messages ---

message LoginRequest {
  string id_token = 1; // 프론트(Google)에서 받은 토큰
}

message LoginResponse {
  string access_token = 1; // 서버가 발급한 JWT
  User user = 2;
}

message GetProfileRequest {
  string user_id = 1; // JWT에서 추출하거나 프론트가 보낸 ID
}

message UserProfileResponse {
  User user = 1;
  Subscription subscription = 2;
}

message GetHistoryRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message HistoryResponse {
  repeated HistoryItem items = 1;
}

message User {
  int64 id = 1;
  string email = 2;
  string name = 3;
  string picture_url = 4;
}

message Subscription {
  string plan_type = 1; // 'free', 'pro'
  string start_date = 2;
  string end_date = 3;
}

message HistoryItem {
  string video_id = 1;
  string video_title = 2;
  string thumbnail_url = 3;
  string analyzed_at = 4;
  int32 safety_score = 5;
  string job_id = 6;
}

// --- [NEW] S3 Upload Messages ---

message UploadURLRequest {
  string filename = 1;       // 업로드할 파일명 (예: "video.mp4")
  string content_type = 2;   // MIME 타입 (예: "video/mp4")
  int64 file_size = 3;       // 파일 크기 (바이트)
  string user_id = 4;        // 업로드하는 사용자 ID
}

message UploadURLResponse {
  string upload_url = 1;     // S3 Presigned URL
  string s3_key = 2;         // S3 객체 키 (경로)
  int32 expires_in = 3;      // URL 만료 시간 (초)
  string upload_id = 4;      // 추적용 고유 ID
}

// --- [NEW] Analysis Result Messages ---

message AnalysisResultRequest {
  string video_id = 1;       // 조회할 video_id
}

message AnalysisResultResponse {
  string video_id = 1;
  float audio_score = 2;     // 0.0-1.0
  float video_score = 3;     // 0.0-1.0
  float context_score = 4;   // 0.0-1.0
  int32 final_score = 5;     // 0-100
  string status = 6;         // processing, completed, failed
  string created_at = 7;
  string updated_at = 8;
}